# python-exchange-integration-runtime

./: .gitignore  API.md  CONTRIBUTING.md  DECISIONS.md  DESIGN.md  MILESTONES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API-Reference.md  Architecture-Overview.md  Configuration.md  Design-Decisions.md  Folder-Structure.md  Quick-Start.md  Roadmap.md  Usage-Examples.md
docs/adr/: README.md
docs/api/: README.md
examples/: README.md
examples/basic/: README.md
src/python_exchange_integration_runtime/: __init__.py  adapter.py  errors.py  exchange_endpoint.py  exchange_request.py  exchange_response.py  runtime.py  signing.py  types.py
tests/: __init__.py  test_adapter_contracts.py  test_core_structure.py  test_repository_structure.py  test_runtime.py
